appId: app.traco
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Permitir"
    timeout: 3000
    optional: true
- tapOn:
    text: "Permitir"
    optional: true
- tapOn:
    id: pagina
- takeScreenshot: caderno-regua
